Install dependencies for integration tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -226,6 +226,9 @@ jobs:
       - name: Install dependencies
         run: npm ci --prefer-offline --no-audit
 
+      - name: Install CDK dependencies
+        run: cd cdk && npm ci
+
       - name: Build application
         run: npm run build:all
 
