fix: improve test output and fix integration test auth issues
- Add silent mode to Jest configs to reduce console output noise
- Add AWS_SAM_LOCAL env var to CI for integration tests
- This fixes auth module checks in integration tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -168,6 +168,7 @@ jobs:
           AWS_ACCESS_KEY_ID: test
           AWS_SECRET_ACCESS_KEY: test
           CI: true
+          AWS_SAM_LOCAL: true
           TEMPLATES_TABLE: local-templates
           TEMPLATE_VIEWS_TABLE: local-template-views
           USER_PROMPTS_TABLE: local-user-prompts
