--- a/cdk/lambda-layers/shared/nodejs/package.json
+++ b/cdk/lambda-layers/shared/nodejs/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "Shared utilities for Lambda functions",
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.0.0",
     "@aws-sdk/client-dynamodb": "^3.0.0",
     "@aws-sdk/lib-dynamodb": "^3.0.0",
-    "@aws-sdk/client-cognito-identity-provider": "^3.0.0",
-    "uuid": "^9.0.0",
     "dompurify": "^3.0.0",
-    "jsdom": "^23.0.0"
+    "ioredis": "^5.6.1",
+    "jsdom": "^23.0.0",
+    "uuid": "^9.0.0"
   }
 }
