--- a/cdk/local-test/docker-compose.yml
+++ b/cdk/local-test/docker-compose.yml
@@ -36,3 +36,14 @@ services:
     volumes:
       - "./tmp/localstack:/tmp/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
+
+  # Redis for local caching (fast performance)
+  redis:
+    image: redis:7-alpine
+    container_name: gravyprompts-redis
+    ports:
+      - "6379:6379"
+    command: redis-server --appendonly yes --appendfsync everysec
+    volumes:
+      - "./redis-data:/data"
+    restart: unless-stopped
