--- a/cdk/package.json
+++ b/cdk/package.json
@@ -34,6 +34,7 @@
     "@aws-amplify/ui-react": "^6.11.2",
     "aws-amplify": "^6.15.1",
     "aws-cdk-lib": "^2.198.0",
-    "constructs": "^10.0.0"
+    "constructs": "^10.0.0",
+    "dotenv": "^16.5.0"
   }
 }
