--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "validate:auth": "./scripts/validate-auth-setup.sh",
     "deploy:api": "./scripts/deploy-api.sh",
     "deploy:budget": "./scripts/deploy-budget.sh",
-    "deploy:dashboard": "./scripts/deploy-dashboard.sh",
     "deploy:all": "./scripts/deploy-all-amplify.sh",
     "deploy:backend": "./scripts/deploy-amplify-backend.sh",
     "deploy:cache": "node ./scripts/deploy-cache.js",
@@ -52,7 +51,6 @@
     "local:setup:admin": "node scripts/local/setup-admin-permissions.js",
     "local:logs": "docker logs gravyprompts-dynamodb-local",
     "local:cleanup": "./scripts/cleanup-local.sh",
-    "local:test:cache": "node ./scripts/test-redis-cache.js",
     "debug:auth": "node scripts/debug-auth.js",
     "test:backend": "cd cdk && npm test",
     "test:backend:watch": "cd cdk && npm run test:watch",
@@ -60,6 +58,7 @@
     "verify:local": "node scripts/verify-local-config.js",
     "fix:local-config": "node scripts/fix-local-config.js",
     "analyze:costs": "node scripts/analyze-costs.js",
+    "cloudwatch:analyze": "node scripts/analyze-cloudwatch-costs.js",
     "local:clear": "node scripts/clear-local-db.js",
     "local:clear:all": "node scripts/clear-local-db.js",
     "local:test": "cd cdk/local-test && ./test-api.sh",
