--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "test:ci:components": "jest --config jest.config.ci.js components/__tests__ --ci",
     "test:local": "jest __tests__/security __tests__/e2e __tests__/integration",
     "test:e2e": "jest __tests__/e2e --runInBand",
+    "test:health": "node scripts/test-health.js",
+    "test:local:all": "node scripts/test-local.js",
+    "test:playwright": "playwright test",
+    "test:playwright:ui": "playwright test --ui",
+    "test:playwright:debug": "playwright test --debug",
     "test:smoke:staging": "jest __tests__/deployment/smoke-tests.test.js --testNamePattern='staging'",
     "test:smoke:production": "jest __tests__/deployment/smoke-tests.test.js --testNamePattern='production'",
     "build:cdk": "cd cdk && rm -f lib/*.d.ts lib/*.js && npm run build",
@@ -113,6 +118,7 @@
     "@aws-sdk/client-dynamodb": "^3.826.0",
     "@aws-sdk/lib-dynamodb": "^3.826.0",
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.53.2",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -130,6 +136,7 @@
     "eslint-config-next": "15.3.4",
     "jest-axe": "^10.0.0",
     "license-checker": "^25.0.1",
+    "playwright": "^1.53.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.4",
